--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Game-Website<title>
-    </head>/>
+        <title>Game-Website</title>
+    </head>
     <body>
         <h1>Welcome To Game-Website!</h1>
     </body>
