--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Game-Website</title>
+        <title>Game Website</title>
     </head>
     <body>
         <h1>Welcome To Game-Website!</h1>
