--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Game Website</title>
+        <link rel="stylesheet" href="Game-Website(CSS).css">
     </head>
     <body>
         <h1>Welcome To Game-Website!</h1>
