--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Game Website</title>
         <link rel="stylesheet" href="Game-Website(CSS).css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     </head>
     <body>
         <h1>Welcome To Game-Website!</h1>
