--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <title>Game Website</title>
         <link rel="stylesheet" href="Game-Website(CSS).css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ropa+Sans">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>Welcome To Game-Website!</h1>
