--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="Game-Website(CSS).css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap" rel="stylesheet">
+        <link rel="icon" href="https://blooddevs.github.io/Game-Website/icon.png">
     </head>
     <body>
         <h1>Welcome To Game-Website!</h1>
