--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     </head>
     <body>
         <h1>Welcome To Game-Website!</h1>
+        <a href="https://blooddevs.github.io/Game-Website/Game" download>
+            <h2>Download Game Here!</h2>
+        </a>
     </body>
 </html>
