--- a/index.html
+++ b/index.html
@@ -8,9 +8,27 @@
         <link rel="icon" href="https://blooddevs.github.io/Game-Website/icon.png">
     </head>
     <body>
-        <h1>Welcome To Game-Website!</h1>
+        <h1 style="text-align:center">Welcome To Game-Website!</h1>
+        <h2 style="text-align:center">This Website Was Made By A Small Team Called The Blood Devs.</h2>
+        <p>&nbsp;</p>
         <a href="https://blooddevs.github.io/Game-Website/Game.zip" download>
-            <h2>Download Game Here!</h2>
+            <h3 style="text-align:center">Download Game Here!</h2>
         </a>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <h4 style="text-align:center">This Website Is Just So The Devs Can Test Their Skills And Have A Game To Play Along Side It.</h4>
     </body>
 </html>
