--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Game Website</title>
         <link rel="stylesheet" href="Game-Website(CSS).css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,21 +15,7 @@
         <a href="https://blooddevs.github.io/Game-Website/Game.zip" download>
             <h3 style="text-align:center">Download Game Here!</h2>
         </a>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
         <h4 style="text-align:center">This Website Is Just So The Devs Can Test Their Skills And Have A Game To Play Along Side It.</h4>
+        <h5>©2020 BloodDevs<h5>
     </body>
 </html>
