--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
             <h3 style="text-align:center">Download Game Here!</h2>
         </a>
         <h4 style="text-align:center">This Website Is Just So The Devs Can Test Their Skills And Have A Game To Play Along Side It.</h4>
-        <h5>©2020 BloodDevs<h5>
+        <h5 style="text-align:left">©2020 BloodDevs<h5>
     </body>
 </html>
